--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "argon2": "^0.31.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
@@ -43,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
